fixed bug of different polaroid sizes with align items stretch on grid

--- a/css/products.css
+++ b/css/products.css
@@ -85,8 +85,9 @@ h2 {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 40px;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   padding: 5rem;
+  
 }
 
 .fanaria {
@@ -127,9 +128,10 @@ h2 {
 
 
 div.polaroid {
-  background-color: white;
+   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 1rem;
+  
 }
 
 div.container {
